fix: apac news bullets alignment

--- a/wp-content/themes/apacportal/style.css
+++ b/wp-content/themes/apacportal/style.css
@@ -354,7 +354,7 @@ h1, h2, h3, h4, h5, h6{
 	background: rgba(255, 255, 255, 0.7);
 	padding-left: 1em;
 	line-height: 2;
-	padding-right: 60px;
+	padding-right: 80px;
 	word-wrap: normal;
 	overflow: hidden;
 	white-space: nowrap;
